feat: move the admin client to jakarta.ws.rs (0.21.0)
ConfigServiceAdminClient was the only javax class left in the SDK, and it
blocks every consumer from moving to Jakarta: Jersey 2 and Jersey 3 share
package names, so an app on Jersey 3 cannot also carry this client's
Jersey 2 on its classpath. ConfigService drives its whole test suite
through this client.

- javax.ws.rs -> jakarta.ws.rs (jakarta.ws.rs-api 3.1.0, jersey-client 3.1.12)
- DatatypeConverter -> java.util.Base64, so the SDK no longer needs JAXB's
  javax API on the classpath (master did not compile on a current JDK
  because of it)
- jersey-client 4.0.2 -> 3.1.12: 4.x is Jakarta EE 11 and nothing in the
  fleet runs it green; 3.1.x matches the servers that consume this SDK
- Java 8 -> 11, the floor Jersey 3.1 requires

No public signature changes: javax types only appeared in private fields
and the private auth filter, so callers recompile unchanged.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>